[package]
name = "drawptable"
version = "0.1.0"
authors = ["Scott Harper <AberrantWolf@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "*", features = ["derive"]}
futures = "*"
winit = "*"
wgpu = "*"
