[package]
name = "drawptable"
version = "0.1.0"
authors = ["Scott Harper <AberrantWolf@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
bytemuck = {version = "^1.7", features = ["derive"]}
futures = "^0.3"
image = "^0.23"
winit = "^0.25"
wgpu = "^0.9"
